fix: ugly window above main nav on mobile if no get active button is defined

--- a/wordpress/wp-content/themes/les-verts/styleguide/src/components/molecules/m-menu/m-menu.scss
+++ b/wordpress/wp-content/themes/les-verts/styleguide/src/components/molecules/m-menu/m-menu.scss
@@ -47,6 +47,7 @@
 			left: 0;
 			width: 100%;
 			padding: 22px 38px;
+			min-height: 80px;
 		}
 
 		@include media($_DESKTOP) {
